# buffoonery

./: CHANGELOG.md  README.md  buffoonery.cabal
app/: Main.hs
src/: Buffoonery.hs
src/Buffoonery/: Card.hs  Hand.hs  Prob.hs  Utils.hs
