cabal-version:      3.4

name:               buffoonery

version:            0.0.0.1

synopsis: Potentially a Balatro helper

license:            GPL-3.0-only

license-file:       LICENSE

author:             findingxyz

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Buffoonery
                      Buffoonery.Card
                      Buffoonery.Hand
                      Buffoonery.Prob
                      Buffoonery.Utils

    build-depends:    base ^>=4.17.2.1,
                      utility-ht >=0.0.17 && <0.0.18,
                      probability >=0.2 && <0.3,
                      transformers >=0.6 && <0.7,
                      random >= 1.1 && <1.3,
                      containers >= 0.6 && < 0.7

    hs-source-dirs:   src

    default-language: GHC2021

executable buffoonery
    import:           warnings

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        buffoonery

    hs-source-dirs:   app

    default-language: GHC2021
